--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+config.js
+
 # Logs
 logs
 *.log
@@ -23,8 +25,9 @@ coverage
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
-# Dependency directory
+# Dependency directories
 node_modules
+jspm_packages
 
 # Optional npm cache directory
 .npm
