--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
   },
   "homepage": "https://github.com/bapinney/fcc-bp-vote",
   "dependencies": {
+    "connect": "^3.4.1",
+    "cookie-session": "^2.0.0-alpha.1",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
+    "mongoose": "^4.4.12",
     "passport": "^0.3.2",
-    "passport-twitter": "^1.0.4"
+    "passport-twitter": "^1.0.4",
+    "uuid": "^2.0.2"
   }
 }
