--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/bapinney/fcc-bp-vote",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.1",
     "chalk": "^1.1.3",
     "express": "^4.13.4",
     "express-router": "0.0.1",
